--- a/css/style.css
+++ b/css/style.css
@@ -1,114 +1,78 @@
-
-
-
-body{
-    margin:0 10%;
-    background:#ccc;
-    font-family: 'Raleway', sans-serif;
-    font-size: 0.9em;
-
+body {
+  margin: 0 10%;
+  background: #ccc;
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9em;
 }
 
-
-
-.card{
-    width:416px;
-    background: #ffffff;
-    box-shadow: 2.5px 4.33px 10px 0px #aaa;
-    transition: 0.2s linear all;
+.card {
+  width: 416px;
+  background: #ffffff;
+  box-shadow: 2.5px 4.33px 10px 0px #aaa;
+  transition: 0.2s linear all;
 }
 
-.card:hover{
-
-    box-shadow: 3.5px 5.33px 12px 0px #666;;
-
+.card:hover {
+  box-shadow: 3.5px 5.33px 12px 0px #666;
 }
 
-
-.card .img-wrapper img{
-    transition: 0.2s linear all;
+.card .img-wrapper img {
+  transition: 0.2s linear all;
 }
 
-.card:hover .img-wrapper img{ transform: scale(1.2);
-        /* transition: 0.2s linear all; */
+.card:hover .img-wrapper img {
+  transform: scale(1.2);
+  /* transition: 0.2s linear all; */
 }
 
-.img-wrapper{
-    overflow: hidden;
-    max-height:211px;
-    background: red;
-   
-
-
+.img-wrapper {
+  overflow: hidden;
+  max-height: 211px;
+  background: red;
 }
 
-.img-wrapper img{
-    width: 100%;
+.img-wrapper img {
+  width: 100%;
 }
 
-.card-content{
-        padding: 0 20px 20px 20px;
-        
-
+.card-content {
+  padding: 0 20px 20px 20px;
 }
 
-.card-content h4{
-    color:#989898;
-font-weight: 500;
-text-transform: uppercase;
-font-size: 0.9em;
-margin: 14px 0 5px 0;
-padding: 0;
+.card-content h4 {
+  color: #989898;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 0.9em;
+  margin: 14px 0 5px 0;
+  padding: 0;
 }
 
-.card-content h2{
-    text-transform: uppercase;
+.card-content h2 {
+  text-transform: uppercase;
 
-font-size:18px;
-    color: #030303;
-    margin: 0;
-    padding: 0;
+  font-size: 18px;
+  color: #030303;
+  margin: 0;
+  padding: 0;
 }
 
-
-.card-content p{
-
-    color: #484848;
-    line-height: 18px;
+.card-content p {
+  color: #484848;
+  line-height: 18px;
 }
 
-button{
-    /* width: 9em; */
-    /* height:2em; */
-    /* font-size: 15px; */
-    /* margin-left: 120px; */
-    /* padding: 10px; */
-   
-    /* border: none; */
-    /* margin-bottom: 15px; */
-    /* margin: 0 auto; */
-  
+.card-content .button-wrap {
+  text-align: center;
+  max-width: 50%;
+  margin: 0 auto;
 }
-
-.card-content .button-wrap{
-    text-align:center;max-width: 50%;margin: 0 auto;
+.card-content a {
+  background-color: #ff9400;
+  text-decoration: none;
+  color: #ffffff;
+  text-transform: uppercase;
+  display: block;
+  padding: 10px;
+  margin: 0 0 15px 0;
 }
-  .card-content a{
-    background-color: #ff9400;
-    text-decoration: none;
-    color:#ffffff;
-    text-transform: uppercase;
-    display: block;
-    /* text-align: center; */
-    padding: 10px;
-    /* margin: 0 auto; */
-    /* max-width: 30%; */
-    margin: 0 0 15px 0;
-
-    
-}
-
-
-
-
-
